compiler/typ/tests/fixtures/diagnostics/0777_polyvar_unsafe_narrowing_coercion_02.ml
let bad_beta (x : [ `A | `B ]) : [ `A ] =
  (x :> [ `A ])
